<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="artist">Artist</string>
    <string name="artist_details">Artist Details</string>
    <string name="playing_now">Playing Now</string>
    <string name="favorites">Favorites</string>
    <string name="play_now">Play Now</string>
    <string name="songs">Songs:</string>
    <string name="artist_name">Artist Name</string>
    <string name="description">Description</string>
    <string name="all">All</string>
    <string name="no_song_playing">No Song Playing</string>
    <string name="invalid">--- --- ---</string>
    <string name="time_0">0:00</string>
    <string name="invalid_duration">-:--/-:--</string>
    <string name="songs_library"><![CDATA[<- songs library]]></string>
    <string name="favorites_button">favorites button</string>
    <string name="play_button">play button</string>
    <string name="rewind_button">rewind button</string>
    <string name="pause_button">pause button</string>
    <string name="playing_song_visualisation">playing song visualisation</string>
    <string name="artist_image">artist image</string>
</resources>
