<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_play_now"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/play_now"
    android:padding="16dp">

    <Button
        android:id="@+id/button_play_now"
        android:layout_height="40dp"
        android:layout_width="wrap_content"
        android:layout_below="@id/song_play_now"
        android:background="@color/colorPrimaryDark"
        android:padding="4dp"
        android:text="@string/playing_now"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/song_play_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/invalid" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/invalid_duration" />

</RelativeLayout>